# wkz-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  example.cfg
.github/workflows/: docker-image.yml
src/: main.rs
