[package]
name = "wkz-rs"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/plexx-dev/wkz-rs"
license = "GPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.15.0", features = ["full"] } # for our async runtime
serde_json = "1.0.114"
serde = { version = "1.0.104", features = ["derive"] }
lettre = "0.11.4"
openssl = { version = "0.10", features = ["vendored"] }